[Fix] root 태그 너비 수정

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     bg-[url('../src/assets/bg-paperptexture.jpg')] 
     w-full
     md:max-w-[calc(100vh_*_9/16)]">
-      <div id="root"></div>
+      <div id="root" class="w-full"></div>
     </div>
   </div>
 </body>
