--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
+  <link rel="icon" href="./bunglogLogo.ico" />
+  <title>붕어빵 탐험대</title>
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
