[feat] OG 메타 태그 추가

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,21 @@
   <meta charset="utf-8" />
   <link rel="icon" href="./bunglogLogo.ico" />
   <title>붕어빵 탐험대</title>
+  <meta property="og:title" content="붕어빵 탐험대">
+  <meta property="og:url" content="https://bunglog.me/">
+  <meta property="og:image" content="https://bunglog.me/assets/png/bunglogMetaImg.png">
+  <meta property="og:description" content="팥냥이와 함께 떠나는 붕어빵 탐험!">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="붕어빵 탐험대">
+  <meta name="twitter:description" content="팥냥이와 함께 떠나는 붕어빵 탐험!">
+  <meta name="twitter:image" content="https://bunglog.me/assets/png/bunglogMetaImg.png">
+  <meta name="twitter:url" content="https://bunglog.me/">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/png/bunglogLogo.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>React App</title>
 </head>
 
 <body>
