--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
   <meta name="theme-color" content="#000000" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/png/bunglogLogo.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1090745988873775"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
